--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon --ignore ./tests/ --exec tsx ./src/main.ts"
+    "dev": "nodemon --ignore ./tests/ --exec tsx ./src/main.ts",
+    "lint": "biome check ./src/ ./tests/",
+    "lint:fix": "biome check --fix ./src/ ./tests/"
   },
   "dependencies": {
     "express": "^4.19.2",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@tsconfig/strictest": "^2.0.5",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
