--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "nodemon --ignore ./tests/ --exec tsx ./src/main.ts",
     "lint": "biome check ./src/ ./tests/",
-    "lint:fix": "biome check --fix ./src/ ./tests/"
+    "lint:fix": "biome check --fix ./src/ ./tests/",
+    "build": "tsup ./src/"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -11,10 +12,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@tsconfig/strictest": "^2.0.5",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "nodemon": "^3.1.4",
+    "tsup": "^8.2.4",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   }
