--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon --ignore ./tests/ --exec tsx ./src/main.ts",
+    "dev": "nodemon --ignore ./tests/ --exec tsx ./src/index.ts",
     "lint": "biome check ./src/ ./tests/",
     "lint:fix": "biome check --fix ./src/ ./tests/",
-    "build": "tsup ./src/"
+    "build": "tsup --format esm ./src/"
   },
   "dependencies": {
     "express": "^4.19.2",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@types/express": "^4.17.21",
+    "@types/knex": "^0.16.1",
     "@types/node": "^22.3.0",
     "nodemon": "^3.1.4",
     "tsup": "^8.2.4",
