--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/knex": "^0.16.1",
     "@types/node": "^22.3.0",
+    "husky": "^9.1.4",
     "nodemon": "^3.1.4",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
