--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       dockerfile: dockerfile
     container_name: ts-webapi-template-webapi
     environment:
+      - ENVIRONMENT=dev
       - PORT=5000
       - DB_CONNECTION_STRING=postgresql://${DB_USER}:${DB_PASSWORD}@db/${DB_NAME}
     ports:
